--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     const db = firebase.database();
 
     // --- GLOBAL CONSTANTS ---
-    const AD_URL = "https://otieu.com/4/9819463";
-    const WHATSAPP_NUMBER = "923048866554";
-    const SUPPORT_EMAIL = "support@adreach.com";
+    const AD_URL = "https://www.revenuecpmgate.com/jv36dh5sy?key=58d94fcbb7253d36f2aed5ea11e32fee";
+    const WHATSAPP_NUMBER = "";
+    const SUPPORT_EMAIL = "adeelawanmalikall@gmail.com";
 
     // --- HELPER FUNCTIONS ---
     const showToast = (message, isError = false) => Toastify({ text: message, duration: 3000, close: true, gravity: "top", position: "center", style: { background: isError ? "#ef4444" : "#8B5CF6", borderRadius: "1rem" } }).showToast();
