--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 case 'spin':
                     const today = new Date().toISOString().slice(0, 10);
                     const canSpin = userData.lastSpinDate !== today;
-                    const spinWheelImage = appSettings.spinRewards?.imageUrl || 'https://i.ibb.co/PMs12m7/spin-real-wheel.png';
+                    const spinWheelImage = appSettings.spinRewards?.imageUrl || 'Tool1.png';
                     return `
                         <div class="p-4 text-center">
                              <div class="flex items-center mb-4"><a href="#/dashboard" class="p-2"><i class="fa-solid fa-arrow-left"></i></a><h1 class="text-2xl font-bold ml-2">Spin Wheel</h1></div>
